design page fully responsive, working on more responsiveness on landing page

--- a/designs.html
+++ b/designs.html
@@ -18,11 +18,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_formal.css?crc=3913094672"/>
-  <link rel="stylesheet" type="text/css" href="css/designs.css?crc=104507408" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/designs.css?crc=4259316751" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_formal.css?crc=3940659496"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_designs.css?crc=4167775617" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_designs.css?crc=415018034" id="nomq_pagesheet"/>
   <![endif]-->
    </head>
  <body>
@@ -39,23 +39,27 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          </div>
         </div>
        </div>
-       <div class="clearfix colelem" id="pu519"><!-- group -->
-        <div class="pointer_cursor clearfix grpelem" id="u519"><!-- group -->
-         <a class="block shared_content" href="evans-scholars.html" data-content-guid="u519_0_content"><!-- Block link tag --></a>
-         <div class="clearfix grpelem" id="u2168"><!-- column -->
-          <a class="nonblock nontext clip_frame colelem" id="u540" href="evans-scholars.html"><!-- image --><img class="block temp_no_img_src" id="u540_img" data-orig-src="images/evans%20es.png?crc=93571438" alt="" data-heightwidthratio="1" data-image-width="156" data-image-height="156" src="images/blank.gif?crc=4208392903"/></a>
-          <a class="nonblock nontext clearfix colelem shared_content" id="u537-4" href="evans-scholars.html" data-content-guid="u537-4_content"><!-- content --><p id="u537-2">Evans Scholars</p></a>
+       <div class="clearfix colelem" id="pu2250"><!-- group -->
+        <div class="clearfix grpelem" id="u2250"><!-- group -->
+         <div class="pointer_cursor clearfix grpelem" id="u519"><!-- group -->
+          <a class="block shared_content" href="evans-scholars.html" data-content-guid="u519_0_content"><!-- Block link tag --></a>
+          <div class="clearfix grpelem" id="u2168"><!-- column -->
+           <a class="nonblock nontext clip_frame colelem" id="u540" href="evans-scholars.html"><!-- image --><img class="block temp_no_img_src" id="u540_img" data-orig-src="images/evans%20es.png?crc=93571438" alt="" data-heightwidthratio="1" data-image-width="156" data-image-height="156" src="images/blank.gif?crc=4208392903"/></a>
+           <a class="nonblock nontext clearfix colelem shared_content" id="u537-4" href="evans-scholars.html" data-content-guid="u537-4_content"><!-- content --><p id="u537-2">Evans Scholars</p></a>
+          </div>
          </div>
         </div>
-        <div class="pointer_cursor clearfix grpelem" id="u522"><!-- group -->
-         <a class="block shared_content" href="swanson-paint-co.html" data-content-guid="u522_0_content"><!-- Block link tag --></a>
-         <div class="clearfix grpelem" id="u2163"><!-- column -->
-          <a class="nonblock nontext clip_frame colelem" id="u1102" href="swanson-paint-co.html"><!-- image --><img class="block temp_no_img_src" id="u1102_img" data-orig-src="images/swanson%20paint%20co%20brush.png?crc=268342375" alt="" data-heightwidthratio="1.087248322147651" data-image-width="149" data-image-height="162" src="images/blank.gif?crc=4208392903"/></a>
-          <a class="nonblock nontext clearfix colelem shared_content" id="u1115-4" href="swanson-paint-co.html" data-content-guid="u1115-4_content"><!-- content --><p id="u1115-2">Swanson Paint Co.</p></a>
+        <div class="clearfix grpelem" id="u2256"><!-- group -->
+         <div class="pointer_cursor clearfix grpelem" id="u522"><!-- group -->
+          <a class="block shared_content" href="swanson-paint-co.html" data-content-guid="u522_0_content"><!-- Block link tag --></a>
+          <div class="clearfix grpelem" id="u2163"><!-- column -->
+           <a class="nonblock nontext clip_frame colelem" id="u1102" href="swanson-paint-co.html"><!-- image --><img class="block temp_no_img_src" id="u1102_img" data-orig-src="images/swanson%20paint%20co%20brush.png?crc=268342375" alt="" data-heightwidthratio="1.087248322147651" data-image-width="149" data-image-height="162" src="images/blank.gif?crc=4208392903"/></a>
+           <a class="nonblock nontext clearfix colelem shared_content" id="u1115-4" href="swanson-paint-co.html" data-content-guid="u1115-4_content"><!-- content --><p id="u1115-2">Swanson Paint Co.</p></a>
+          </div>
          </div>
         </div>
        </div>
-       <div class="clearfix colelem shared_content" id="pu598" data-content-guid="pu598_content"><!-- group -->
+       <div class="clearfix colelem shared_content" id="u2262" data-content-guid="u2262_content"><!-- group -->
         <div class="clearfix grpelem" id="u598"><!-- group -->
          <div class="pointer_cursor clearfix grpelem" id="u599"><!-- group -->
           <a class="block" href="index.html"><!-- Block link tag --></a>
@@ -91,23 +95,27 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="temp_no_id" data-orig-id="u344"><!-- column -->
       <div class="clearfix temp_no_id" data-orig-id="u344_align_to_page">
        <span class="clearfix colelem placeholder" data-placeholder-for="u480_content"><!-- placeholder node --></span>
-       <div class="clearfix colelem temp_no_id" data-orig-id="pu519"><!-- group -->
-        <div class="pointer_cursor clearfix grpelem temp_no_id" data-orig-id="u519"><!-- group -->
-         <span class="block placeholder" data-placeholder-for="u519_0_content"><!-- placeholder node --></span>
-         <div class="clearfix grpelem temp_no_id" data-orig-id="u2168"><!-- column -->
-          <a class="nonblock nontext clip_frame colelem temp_no_id" href="evans-scholars.html" data-orig-id="u540"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/evans%20es.png?crc=93571438" alt="" data-heightwidthratio="1" data-image-width="119" data-image-height="119" data-orig-id="u540_img" src="images/blank.gif?crc=4208392903"/></a>
-          <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u537-4_content"><!-- placeholder node --></span>
+       <div class="clearfix colelem temp_no_id" data-orig-id="pu2250"><!-- group -->
+        <div class="clearfix grpelem temp_no_id" data-orig-id="u2250"><!-- group -->
+         <div class="pointer_cursor clearfix grpelem temp_no_id" data-orig-id="u519"><!-- group -->
+          <span class="block placeholder" data-placeholder-for="u519_0_content"><!-- placeholder node --></span>
+          <div class="clearfix grpelem temp_no_id" data-orig-id="u2168"><!-- column -->
+           <a class="nonblock nontext clip_frame colelem temp_no_id" href="evans-scholars.html" data-orig-id="u540"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/evans%20es.png?crc=93571438" alt="" data-heightwidthratio="1" data-image-width="119" data-image-height="119" data-orig-id="u540_img" src="images/blank.gif?crc=4208392903"/></a>
+           <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u537-4_content"><!-- placeholder node --></span>
+          </div>
          </div>
         </div>
-        <div class="pointer_cursor clearfix grpelem temp_no_id" data-orig-id="u522"><!-- group -->
-         <span class="block placeholder" data-placeholder-for="u522_0_content"><!-- placeholder node --></span>
-         <div class="clearfix grpelem temp_no_id" data-orig-id="u2163"><!-- column -->
-          <a class="nonblock nontext clip_frame colelem temp_no_id" href="swanson-paint-co.html" data-orig-id="u1102"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/swanson%20paint%20co%20brush.png?crc=268342375" alt="" data-heightwidthratio="1.084033613445378" data-image-width="119" data-image-height="129" data-orig-id="u1102_img" src="images/blank.gif?crc=4208392903"/></a>
-          <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u1115-4_content"><!-- placeholder node --></span>
+        <div class="clearfix grpelem temp_no_id" data-orig-id="u2256"><!-- group -->
+         <div class="pointer_cursor clearfix grpelem temp_no_id" data-orig-id="u522"><!-- group -->
+          <span class="block placeholder" data-placeholder-for="u522_0_content"><!-- placeholder node --></span>
+          <div class="clearfix grpelem temp_no_id" data-orig-id="u2163"><!-- column -->
+           <a class="nonblock nontext clip_frame colelem temp_no_id" href="swanson-paint-co.html" data-orig-id="u1102"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/swanson%20paint%20co%20brush.png?crc=268342375" alt="" data-heightwidthratio="1.084033613445378" data-image-width="119" data-image-height="129" data-orig-id="u1102_img" src="images/blank.gif?crc=4208392903"/></a>
+           <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u1115-4_content"><!-- placeholder node --></span>
+          </div>
          </div>
         </div>
        </div>
-       <span class="clearfix colelem placeholder" data-placeholder-for="pu598_content"><!-- placeholder node --></span>
+       <span class="clearfix colelem placeholder" data-placeholder-for="u2262_content"><!-- placeholder node --></span>
       </div>
      </div>
     </div>
@@ -121,21 +129,25 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="temp_no_id" data-orig-id="u344"><!-- column -->
       <div class="clearfix temp_no_id" data-orig-id="u344_align_to_page">
        <span class="clearfix colelem placeholder" data-placeholder-for="u480_content"><!-- placeholder node --></span>
-       <div class="pointer_cursor clearfix colelem temp_no_id" data-orig-id="u519"><!-- group -->
-        <span class="block placeholder" data-placeholder-for="u519_0_content"><!-- placeholder node --></span>
-        <div class="clearfix grpelem temp_no_id" data-orig-id="u2168"><!-- column -->
-         <a class="nonblock nontext clip_frame colelem temp_no_id" href="evans-scholars.html" data-orig-id="u540"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/evans%20es.png?crc=93571438" alt="" data-heightwidthratio="1" data-image-width="98" data-image-height="98" data-orig-id="u540_img" src="images/blank.gif?crc=4208392903"/></a>
-         <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u537-4_content"><!-- placeholder node --></span>
+       <div class="clearfix colelem temp_no_id" data-orig-id="u2250"><!-- group -->
+        <div class="pointer_cursor clearfix grpelem temp_no_id" data-orig-id="u519"><!-- group -->
+         <span class="block placeholder" data-placeholder-for="u519_0_content"><!-- placeholder node --></span>
+         <div class="clearfix grpelem temp_no_id" data-orig-id="u2168"><!-- column -->
+          <a class="nonblock nontext clip_frame colelem temp_no_id" href="evans-scholars.html" data-orig-id="u540"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/evans%20es.png?crc=93571438" alt="" data-heightwidthratio="1" data-image-width="98" data-image-height="98" data-orig-id="u540_img" src="images/blank.gif?crc=4208392903"/></a>
+          <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u537-4_content"><!-- placeholder node --></span>
+         </div>
         </div>
        </div>
-       <div class="pointer_cursor clearfix colelem temp_no_id" data-orig-id="u522"><!-- group -->
-        <span class="block placeholder" data-placeholder-for="u522_0_content"><!-- placeholder node --></span>
-        <div class="clearfix grpelem temp_no_id" data-orig-id="u2163"><!-- column -->
-         <a class="nonblock nontext clip_frame colelem temp_no_id" href="swanson-paint-co.html" data-orig-id="u1102"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/swanson%20paint%20co%20brush.png?crc=268342375" alt="" data-heightwidthratio="1.092783505154639" data-image-width="97" data-image-height="106" data-orig-id="u1102_img" src="images/blank.gif?crc=4208392903"/></a>
-         <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u1115-4_content"><!-- placeholder node --></span>
+       <div class="clearfix colelem temp_no_id" data-orig-id="u2256"><!-- group -->
+        <div class="pointer_cursor clearfix grpelem temp_no_id" data-orig-id="u522"><!-- group -->
+         <span class="block placeholder" data-placeholder-for="u522_0_content"><!-- placeholder node --></span>
+         <div class="clearfix grpelem temp_no_id" data-orig-id="u2163"><!-- column -->
+          <a class="nonblock nontext clip_frame colelem temp_no_id" href="swanson-paint-co.html" data-orig-id="u1102"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/swanson%20paint%20co%20brush.png?crc=268342375" alt="" data-heightwidthratio="1.092783505154639" data-image-width="97" data-image-height="106" data-orig-id="u1102_img" src="images/blank.gif?crc=4208392903"/></a>
+          <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u1115-4_content"><!-- placeholder node --></span>
+         </div>
         </div>
        </div>
-       <span class="clearfix colelem placeholder" data-placeholder-for="pu598_content"><!-- placeholder node --></span>
+       <span class="clearfix colelem placeholder" data-placeholder-for="u2262_content"><!-- placeholder node --></span>
       </div>
      </div>
     </div>
@@ -149,26 +161,30 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="temp_no_id" data-orig-id="u344"><!-- column -->
       <div class="clearfix temp_no_id" data-orig-id="u344_align_to_page">
        <span class="clearfix colelem placeholder" data-placeholder-for="u480_content"><!-- placeholder node --></span>
-       <div class="pointer_cursor clearfix colelem temp_no_id" data-orig-id="u519"><!-- group -->
-        <span class="block placeholder" data-placeholder-for="u519_0_content"><!-- placeholder node --></span>
-        <div class="clearfix grpelem temp_no_id" data-orig-id="u2168"><!-- column -->
-         <a class="nonblock nontext clip_frame colelem temp_no_id" href="evans-scholars.html" data-orig-id="u540"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/evans%20es.png?crc=93571438" alt="" data-heightwidthratio="1" data-image-width="81" data-image-height="81" data-orig-id="u540_img" src="images/blank.gif?crc=4208392903"/></a>
-         <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u537-4_content"><!-- placeholder node --></span>
+       <div class="clearfix colelem temp_no_id" data-orig-id="u2250"><!-- group -->
+        <div class="pointer_cursor clearfix grpelem temp_no_id" data-orig-id="u519"><!-- group -->
+         <span class="block placeholder" data-placeholder-for="u519_0_content"><!-- placeholder node --></span>
+         <div class="clearfix grpelem temp_no_id" data-orig-id="u2168"><!-- column -->
+          <a class="nonblock nontext clip_frame colelem temp_no_id" href="evans-scholars.html" data-orig-id="u540"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/evans%20es.png?crc=93571438" alt="" data-heightwidthratio="1" data-image-width="81" data-image-height="81" data-orig-id="u540_img" src="images/blank.gif?crc=4208392903"/></a>
+          <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u537-4_content"><!-- placeholder node --></span>
+         </div>
         </div>
        </div>
-       <div class="pointer_cursor clearfix colelem temp_no_id" data-orig-id="u522"><!-- group -->
-        <span class="block placeholder" data-placeholder-for="u522_0_content"><!-- placeholder node --></span>
-        <div class="clearfix grpelem temp_no_id" data-orig-id="u2163"><!-- column -->
-         <a class="nonblock nontext clip_frame colelem temp_no_id" href="swanson-paint-co.html" data-orig-id="u1102"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/swanson%20paint%20co%20brush.png?crc=268342375" alt="" data-heightwidthratio="1.0987654320987654" data-image-width="81" data-image-height="89" data-orig-id="u1102_img" src="images/blank.gif?crc=4208392903"/></a>
-         <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u1115-4_content"><!-- placeholder node --></span>
+       <div class="clearfix colelem temp_no_id" data-orig-id="u2256"><!-- group -->
+        <div class="pointer_cursor clearfix grpelem temp_no_id" data-orig-id="u522"><!-- group -->
+         <span class="block placeholder" data-placeholder-for="u522_0_content"><!-- placeholder node --></span>
+         <div class="clearfix grpelem temp_no_id" data-orig-id="u2163"><!-- column -->
+          <a class="nonblock nontext clip_frame colelem temp_no_id" href="swanson-paint-co.html" data-orig-id="u1102"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/swanson%20paint%20co%20brush.png?crc=268342375" alt="" data-heightwidthratio="1.0987654320987654" data-image-width="81" data-image-height="89" data-orig-id="u1102_img" src="images/blank.gif?crc=4208392903"/></a>
+          <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u1115-4_content"><!-- placeholder node --></span>
+         </div>
         </div>
        </div>
-       <span class="clearfix colelem placeholder" data-placeholder-for="pu598_content"><!-- placeholder node --></span>
+       <span class="clearfix colelem placeholder" data-placeholder-for="u2262_content"><!-- placeholder node --></span>
       </div>
      </div>
     </div>
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu489_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="639" data-content-above-spacer="1015" data-content-below-spacer="375" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="576" data-content-above-spacer="1015" data-content-below-spacer="439" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
   </div>
   <!-- Other scripts -->
