--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_landing.css?crc=3920317060"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4041242721" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_landing.css?crc=416055496"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=320777186" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_landing.css?crc=3769235557"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=337663110" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=3766920466" id="nomq_pagesheet"/>
   <![endif]-->
     <!--custom head HTML-->
   <style type="text/css">
@@ -36,7 +36,7 @@ overflow-x:hidden;
 
   <div class="breakpoint active" id="bp_infinity" data-min-width="611"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox" id="page"><!-- column -->
-    <div class="browser_width colelem" id="u94-bw">
+    <div class="browser_width colelem shared_content" id="u94-bw" data-content-guid="u94-bw_content">
      <div id="u94"><!-- column -->
       <div class="clearfix" id="u94_align_to_page">
        <div class="clearfix colelem shared_content" id="u286-4" data-content-guid="u286-4_content"><!-- content -->
@@ -91,34 +91,26 @@ overflow-x:hidden;
   </div>
   <div class="breakpoint" id="bp_610" data-min-width="328" data-max-width="610"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- column -->
-    <div class="browser_width colelem temp_no_id" data-orig-id="u94-bw">
-     <div class="temp_no_id" data-orig-id="u94"><!-- column -->
-      <div class="clearfix temp_no_id" data-orig-id="u94_align_to_page">
-       <div class="position_content" id="u94_position_content">
-        <span class="clearfix colelem placeholder" data-placeholder-for="u286-4_content"><!-- placeholder node --></span>
-        <span class="clearfix colelem placeholder" data-placeholder-for="u287-4_content"><!-- placeholder node --></span>
-        <span class="clearfix colelem placeholder" data-placeholder-for="u331_content"><!-- placeholder node --></span>
-       </div>
-      </div>
-     </div>
-    </div>
+    <span class="browser_width colelem placeholder" data-placeholder-for="u94-bw_content"><!-- placeholder node --></span>
     <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="1069" data-content-below-spacer="0" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
   </div>
   <div class="breakpoint" id="bp_327" data-max-width="327"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- column -->
-    <div class="browser_width colelem temp_no_id" data-orig-id="u94-bw">
-     <div class="temp_no_id" data-orig-id="u94"><!-- column -->
-      <div class="clearfix temp_no_id" data-orig-id="u94_align_to_page">
-       <div class="clearfix colelem" id="pu286-4"><!-- group -->
-        <span class="clearfix grpelem placeholder" data-placeholder-for="u286-4_content"><!-- placeholder node --></span>
-        <span class="clearfix grpelem placeholder" data-placeholder-for="u287-4_content"><!-- placeholder node --></span>
+    <div class="position_content" id="page_position_content">
+     <div class="browser_width colelem temp_no_id" data-orig-id="u94-bw">
+      <div class="temp_no_id" data-orig-id="u94"><!-- column -->
+       <div class="clearfix temp_no_id" data-orig-id="u94_align_to_page">
+        <div class="clearfix colelem" id="pu286-4"><!-- group -->
+         <span class="clearfix grpelem placeholder" data-placeholder-for="u286-4_content"><!-- placeholder node --></span>
+         <span class="clearfix grpelem placeholder" data-placeholder-for="u287-4_content"><!-- placeholder node --></span>
+        </div>
+        <span class="clearfix colelem placeholder" data-placeholder-for="u331_content"><!-- placeholder node --></span>
        </div>
-       <span class="clearfix colelem placeholder" data-placeholder-for="u331_content"><!-- placeholder node --></span>
       </div>
      </div>
+     <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="792" data-content-below-spacer="0" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     </div>
-    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="840" data-content-below-spacer="0" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
   </div>
   <!-- Other scripts -->
