--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_landing.css?crc=416055496"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4244355195" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_landing.css?crc=185735806"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3807464178" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_landing.css?crc=3769235557"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=3766920466" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_landing.css?crc=3985175682"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=292806624" id="nomq_pagesheet"/>
   <![endif]-->
     <!--custom head HTML-->
   <style type="text/css">
@@ -36,79 +36,69 @@ overflow-x:hidden;
 
   <div class="breakpoint active" id="bp_infinity" data-min-width="611"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox" id="page"><!-- column -->
-    <div class="browser_width colelem shared_content" id="u94-bw" data-content-guid="u94-bw_content">
-     <div id="u94"><!-- column -->
-      <div class="clearfix" id="u94_align_to_page">
-       <div class="clearfix colelem shared_content" id="u286-4" data-content-guid="u286-4_content"><!-- content -->
-        <p id="u286-2">Cory Swanson</p>
-       </div>
-       <div class="clearfix colelem shared_content" id="u287-4" data-content-guid="u287-4_content"><!-- content -->
-        <p id="u287-2">Graphic Design</p>
-       </div>
-       <div class="clearfix colelem shared_content" id="u331" data-content-guid="u331_content"><!-- column -->
-        <div class="clearfix colelem" id="u328"><!-- group -->
-         <div class="pointer_cursor MuseLinkActive clearfix grpelem" id="u244"><!-- group -->
-          <a class="block" href="index.html"><!-- Block link tag --></a>
-          <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u292-4" href="index.html"><!-- content --><p id="u292-2">Home</p></a>
-         </div>
-        </div>
-        <div class="clearfix colelem" id="u325"><!-- group -->
-         <div class="pointer_cursor clearfix grpelem" id="u245"><!-- group -->
-          <a class="block" href="designs.html"><!-- Block link tag --></a>
-          <a class="nonblock nontext clearfix grpelem" id="u293-4" href="designs.html"><!-- content --><p id="u293-2">Designs</p></a>
-         </div>
-        </div>
-        <div class="clearfix colelem" id="u322"><!-- group -->
-         <div class="pointer_cursor clearfix grpelem" id="u246"><!-- group -->
-          <a class="block" href="photos.html"><!-- Block link tag --></a>
-          <a class="nonblock nontext clearfix grpelem" id="u294-4" href="photos.html"><!-- content --><p id="u294-2">Photos</p></a>
-         </div>
-        </div>
-        <div class="clearfix colelem" id="u319"><!-- group -->
-         <div class="pointer_cursor clearfix grpelem" id="u247"><!-- group -->
-          <a class="block" href="assets/swanson-resume.pdf"><!-- Block link tag --></a>
-          <a class="nonblock nontext clearfix grpelem" id="u297-4" href="assets/swanson-resume.pdf"><!-- content --><p id="u297-2">Résumé</p></a>
-         </div>
-        </div>
-        <div class="clearfix colelem" id="u316"><!-- group -->
-         <div class="pointer_cursor clearfix grpelem" id="u248"><!-- group -->
-          <a class="block" href="mailto:cory.swanson1@gmail.com"><!-- Block link tag --></a>
-          <a class="nonblock nontext clearfix grpelem" id="u296-4" href="mailto:cory.swanson1@gmail.com"><!-- content --><p id="u296-2">Email</p></a>
-         </div>
-        </div>
-        <div class="clearfix colelem" id="u313"><!-- group -->
-         <div class="pointer_cursor clearfix grpelem" id="u249"><!-- group -->
-          <a class="block" href="https://www.instagram.com/bent_spoke/?hl=en"><!-- Block link tag --></a>
-          <a class="nonblock nontext clearfix grpelem" id="u295-4" href="https://www.instagram.com/bent_spoke/?hl=en"><!-- content --><p id="u295-2">Instagram</p></a>
-         </div>
-        </div>
-       </div>
+    <div class="clearfix colelem shared_content" id="u286-4" data-content-guid="u286-4_content"><!-- content -->
+     <p id="u286-2">Cory Swanson</p>
+    </div>
+    <div class="clearfix colelem shared_content" id="u287-4" data-content-guid="u287-4_content"><!-- content -->
+     <p id="u287-2">Graphic Design</p>
+    </div>
+    <div class="clearfix colelem shared_content" id="u331" data-content-guid="u331_content"><!-- column -->
+     <div class="clearfix colelem" id="u328"><!-- group -->
+      <div class="pointer_cursor MuseLinkActive clearfix grpelem" id="u244"><!-- group -->
+       <a class="block" href="index.html"><!-- Block link tag --></a>
+       <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u292-4" href="index.html"><!-- content --><p id="u292-2">Home</p></a>
+      </div>
+     </div>
+     <div class="clearfix colelem" id="u325"><!-- group -->
+      <div class="pointer_cursor clearfix grpelem" id="u245"><!-- group -->
+       <a class="block" href="designs.html"><!-- Block link tag --></a>
+       <a class="nonblock nontext clearfix grpelem" id="u293-4" href="designs.html"><!-- content --><p id="u293-2">Designs</p></a>
+      </div>
+     </div>
+     <div class="clearfix colelem" id="u322"><!-- group -->
+      <div class="pointer_cursor clearfix grpelem" id="u246"><!-- group -->
+       <a class="block" href="photos.html"><!-- Block link tag --></a>
+       <a class="nonblock nontext clearfix grpelem" id="u294-4" href="photos.html"><!-- content --><p id="u294-2">Photos</p></a>
+      </div>
+     </div>
+     <div class="clearfix colelem" id="u319"><!-- group -->
+      <div class="pointer_cursor clearfix grpelem" id="u247"><!-- group -->
+       <a class="block" href="assets/swanson-resume.pdf"><!-- Block link tag --></a>
+       <a class="nonblock nontext clearfix grpelem" id="u297-4" href="assets/swanson-resume.pdf"><!-- content --><p id="u297-2">Résumé</p></a>
+      </div>
+     </div>
+     <div class="clearfix colelem" id="u316"><!-- group -->
+      <div class="pointer_cursor clearfix grpelem" id="u248"><!-- group -->
+       <a class="block" href="mailto:cory.swanson1@gmail.com"><!-- Block link tag --></a>
+       <a class="nonblock nontext clearfix grpelem" id="u296-4" href="mailto:cory.swanson1@gmail.com"><!-- content --><p id="u296-2">Email</p></a>
+      </div>
+     </div>
+     <div class="clearfix colelem" id="u313"><!-- group -->
+      <div class="pointer_cursor clearfix grpelem" id="u249"><!-- group -->
+       <a class="block" href="https://www.instagram.com/bent_spoke/?hl=en"><!-- Block link tag --></a>
+       <a class="nonblock nontext clearfix grpelem" id="u295-4" href="https://www.instagram.com/bent_spoke/?hl=en"><!-- content --><p id="u295-2">Instagram</p></a>
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="2670" data-content-below-spacer="0" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="455" data-content-below-spacer="68" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
   </div>
   <div class="breakpoint" id="bp_610" data-min-width="328" data-max-width="610"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- column -->
-    <span class="browser_width colelem placeholder" data-placeholder-for="u94-bw_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="1069" data-content-below-spacer="0" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <span class="clearfix colelem placeholder" data-placeholder-for="u286-4_content"><!-- placeholder node --></span>
+    <span class="clearfix colelem placeholder" data-placeholder-for="u287-4_content"><!-- placeholder node --></span>
+    <span class="clearfix colelem placeholder" data-placeholder-for="u331_content"><!-- placeholder node --></span>
+    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="438" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
   </div>
   <div class="breakpoint" id="bp_327" data-max-width="327"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- column -->
-    <div class="browser_width colelem temp_no_id" data-orig-id="u94-bw">
-     <div class="temp_no_id" data-orig-id="u94"><!-- column -->
-      <div class="clearfix temp_no_id" data-orig-id="u94_align_to_page">
-       <div class="clearfix colelem" id="pu286-4"><!-- group -->
-        <span class="clearfix grpelem placeholder" data-placeholder-for="u286-4_content"><!-- placeholder node --></span>
-        <span class="clearfix grpelem placeholder" data-placeholder-for="u287-4_content"><!-- placeholder node --></span>
-       </div>
-       <span class="clearfix colelem placeholder" data-placeholder-for="u331_content"><!-- placeholder node --></span>
-      </div>
-     </div>
+    <div class="clearfix colelem" id="pu286-4"><!-- group -->
+     <span class="clearfix grpelem placeholder" data-placeholder-for="u286-4_content"><!-- placeholder node --></span>
+     <span class="clearfix grpelem placeholder" data-placeholder-for="u287-4_content"><!-- placeholder node --></span>
     </div>
-    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="839" data-content-below-spacer="0" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <span class="clearfix colelem placeholder" data-placeholder-for="u331_content"><!-- placeholder node --></span>
+    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="407" data-content-below-spacer="92" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
   </div>
   <!-- Other scripts -->
@@ -126,8 +116,6 @@ var muse_init=function(){require.config({baseUrl:""});require(["jquery","museuti
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
-Muse.Utils.resizeHeight('.browser_width');/* resize height */
-Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
