--- a/swanson-paint-co.html
+++ b/swanson-paint-co.html
@@ -17,47 +17,34 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Swanson Paint Co</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_formal.css?crc=3913094672"/>
-  <link rel="stylesheet" type="text/css" href="css/swanson-paint-co.css?crc=128888692" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_formal.css?crc=4128891167"/>
+  <link rel="stylesheet" type="text/css" href="css/swanson-paint-co.css?crc=4275233249" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_formal.css?crc=3940659496"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_swanson-paint-co.css?crc=3955117439" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_formal.css?crc=455031442"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_swanson-paint-co.css?crc=3774424844" id="nomq_pagesheet"/>
   <![endif]-->
    </head>
  <body>
 
   <div class="breakpoint active" id="bp_infinity" data-min-width="731"><!-- responsive breakpoint node -->
-   <div class="clearfix borderbox" id="page"><!-- group -->
-    <div class="browser_width grpelem shared_content" id="u344-bw" data-content-guid="u344-bw_content">
-     <div id="u344"><!-- simple frame --></div>
+   <div class="clearfix borderbox shared_content" id="page" data-content-guid="page_content"><!-- group -->
+    <div class="browser_width" id="u489-bw">
+     <div id="u489"><!-- simple frame --></div>
     </div>
-    <div class="clearfix grpelem shared_content" id="pu489" data-content-guid="pu489_content"><!-- group -->
-     <div class="browser_width" id="u489-bw">
-      <div id="u489"><!-- simple frame --></div>
-     </div>
-     <a class="nonblock nontext clearfix" id="u345-4" href="index.html"><!-- content --><p id="u345-2">Cory Swanson</p></a>
-     <a class="nonblock nontext clearfix" id="u346-4" href="index.html"><!-- content --><p id="u346-2">Graphic Design</p></a>
-     <div class="browser_width" id="u353-bw">
-      <div id="u353"><!-- simple frame --></div>
-     </div>
+    <a class="nonblock nontext clearfix" id="u345-4" href="index.html"><!-- content --><p id="u345-2">Cory Swanson</p></a>
+    <a class="nonblock nontext clearfix" id="u346-4" href="index.html"><!-- content --><p id="u346-2">Graphic Design</p></a>
+    <div class="browser_width" id="u353-bw">
+     <div id="u353"><!-- simple frame --></div>
     </div>
-    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="1382" data-content-below-spacer="1382" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="0" data-content-below-spacer="500" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
   </div>
   <div class="breakpoint" id="bp_730" data-min-width="601" data-max-width="730"><!-- responsive breakpoint node -->
-   <div class="clearfix borderbox temp_no_id shared_content" data-orig-id="page" data-content-guid="page_content"><!-- group -->
-    <span class="browser_width grpelem placeholder" data-placeholder-for="u344-bw_content"><!-- placeholder node --></span>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="pu489_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="1015" data-content-below-spacer="1015" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-   </div>
+   <span class="clearfix borderbox placeholder" data-placeholder-for="page_content"><!-- placeholder node --></span>
   </div>
   <div class="breakpoint" id="bp_600" data-min-width="501" data-max-width="600"><!-- responsive breakpoint node -->
-   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
-    <span class="browser_width grpelem placeholder" data-placeholder-for="u344-bw_content"><!-- placeholder node --></span>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="pu489_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="918" data-content-below-spacer="918" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-   </div>
+   <span class="clearfix borderbox placeholder" data-placeholder-for="page_content"><!-- placeholder node --></span>
   </div>
   <div class="breakpoint" id="bp_500" data-max-width="500"><!-- responsive breakpoint node -->
    <span class="clearfix borderbox placeholder" data-placeholder-for="page_content"><!-- placeholder node --></span>
@@ -77,8 +64,6 @@ var muse_init=function(){require.config({baseUrl:""});require(["jquery","museuti
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
-Muse.Utils.resizeHeight('.browser_width');/* resize height */
-Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
