adding google analytics to every existing and future page

--- a/index.html
+++ b/index.html
@@ -25,12 +25,24 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=292806624" id="nomq_pagesheet"/>
   <![endif]-->
     <!--custom head HTML-->
-  <style type="text/css">
-html,body{
-overflow-y:hidden;
-overflow-x:hidden;
-}
-</style>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130588218-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-130588218-1');
+</script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130588218-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-130588218-1');
+</script>
  </head>
  <body>
 
