--- a/photos.html
+++ b/photos.html
@@ -30,7 +30,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/source-sans-pro:n4:default.js" type="text/javascript"></script>
-    <!--HTML Widget code-->
+    <!--custom head HTML-->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130588218-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-130588218-1');
+</script>
+  <!--HTML Widget code-->
   
     <style type="text/css">
     #u553 { font-size: 1px; line-height: 0px;}
