--- a/swanson-paint-co.html
+++ b/swanson-paint-co.html
@@ -24,7 +24,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_formal.css?crc=455031442"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_swanson-paint-co.css?crc=3774424844" id="nomq_pagesheet"/>
   <![endif]-->
-   </head>
+    <!--custom head HTML-->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130588218-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-130588218-1');
+</script>
+ </head>
  <body>
 
   <div class="breakpoint active" id="bp_infinity" data-min-width="731"><!-- responsive breakpoint node -->
